--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
                                 Their expertise and dedication exceeded our expectations."
                             </p>
                             <div class="testimonial__author">
-                                <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=150" alt="Sarah Johnson">
+                                <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=150" alt="Mark Johnson">
                                 <div class="testimonial__info">
-                                    <h4>Sarah Johnson</h4>
+                                    <h4>Mark Johnson</h4>
                                     <span>CEO, TechStart Inc.</span>
                                 </div>
                             </div>
