--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -175,7 +175,7 @@
                             <p>If you have questions about this Privacy Policy or our data practices, please contact us:</p>
                             <div class="contact-info">
                                 <p><strong>Vision Edge</strong></p>
-                                <p>173C, Muhafiz Town<br>Gujranwala, Pakistan</p>
+                                <p> Eden Tower, Gulberg Main Boulevard<br>Lahore, Pakistan</p>
                                 <p>Email: <a href="mailto:info@visionedge.tech">info@visionedge.tech</a></p>
                                 <p>Phone: +92 (300) 123-4567</p>
                             </div>
