--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -205,7 +205,7 @@
                             <p>For questions about these Terms of Service, please contact us:</p>
                             <div class="contact-info">
                                 <p><strong>Vision Edge</strong></p>
-                                <p>173C, Muhafiz Town<br>Gujranwala, Pakistan</p>
+                                <p>Eden Tower, Gulberg Main Boulevard<br>Lahore, Pakistan</p>
                                 <p>Email: <a href="mailto:info@visionedge.tech">info@visionedge.tech</a></p>
                                 <p>Phone: +92 (300) 123-4567</p>
                             </div>
