--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                             </div>
                             <div class="contact__details">
                                 <h4>Our Location</h4>
-                                <p>Muhafiz Town<br>Gujranwala, Pakistan</p>
+                                <p>Eden Tower, Gulberg Main Boulevard<br>Lahore, Pakistan</p>
                             </div>
                         </div>
                         <div class="contact__item">
